--- a/.gitignore
+++ b/.gitignore
@@ -178,3 +178,21 @@ pyrightconfig.json
 
 
 # End of https://www.toptal.com/developers/gitignore/api/python
+
+# Jekyll
+_site/
+.sass-cache/
+.jekyll-cache/
+.jekyll-metadata
+
+# Python
+__pycache__/
+*.pyc
+
+# IDEs
+.vscode/
+.idea/
+
+# OS files
+.DS_Store
+Thumbs.db
