--- a/.github/workflows/update-structure.yml
+++ b/.github/workflows/update-structure.yml
@@ -42,3 +42,11 @@ jobs:
         git add structure.json
         git commit -m "Update folder structure" || echo "No changes to commit"
         git push
+    - name: Verify file existence
+      run: |
+        if [ -f "structure.json" ]; then
+          echo "structure.json exists"
+        else
+          echo "structure.json does not exist"
+          exit 1
+        fi
