--- a/.github/workflows/update-structure.yml
+++ b/.github/workflows/update-structure.yml
@@ -41,7 +41,7 @@ jobs:
         git config --local user.name "GitHub Action"
         git add structure.json
         git commit -m "Update folder structure" || echo "No changes to commit"
-        git push
+        git push --force
     - name: Verify file existence
       run: |
         if [ -f "structure.json" ]; then
