--- a/.github/workflows/update-structure.yml
+++ b/.github/workflows/update-structure.yml
@@ -27,11 +27,13 @@ jobs:
                 full_path = os.path.join(path, item)
                 if os.path.isdir(full_path):
                     result[item] = get_structure(full_path)
-                else:
+                elif os.path.dirname(full_path) != '.':  # Only include files if they're not in the root directory
                     result[item] = None
             return result
 
         structure = get_structure('.')
+        # Only keep top-level folders
+        structure = {k: v for k, v in structure.items() if isinstance(v, dict)}
         with open('structure.json', 'w') as f:
             json.dump(structure, f, indent=2)
       shell: python
