--- a/.github/workflows/update-structure.yml
+++ b/.github/workflows/update-structure.yml
@@ -14,8 +14,6 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
-    - name: Delete existing structure.json
-      run: rm -f structure.json
     - name: Generate folder structure
       run: |
         import os
@@ -24,16 +22,17 @@ jobs:
         def get_structure(path):
             result = {}
             for item in os.listdir(path):
-                if item.startswith('.') or item == 'structure.json':
+                if item.startswith('.') or item in ['structure.json', 'node_modules']:
                     continue
                 full_path = os.path.join(path, item)
                 if os.path.isdir(full_path):
-                    sub_structure = get_structure(full_path)
-                    if sub_structure:  # Only include non-empty folders
-                        result[item] = sub_structure
+                    result[item] = get_structure(full_path)
+                else:
+                    result[item] = None
             return result
 
         structure = get_structure('.')
+        print("Generated structure:", json.dumps(structure, indent=2))
         with open('structure.json', 'w') as f:
             json.dump(structure, f, indent=2)
       shell: python
