--- a/.github/workflows/update-structure.yml
+++ b/.github/workflows/update-structure.yml
@@ -19,7 +19,7 @@ jobs:
         import os
         import json
 
-        def get_structure(path):
+        def get_structure(path, is_root=False):
             result = {}
             for item in os.listdir(path):
                 if item.startswith('.') or item in ['structure.json', 'node_modules']:
@@ -27,11 +27,11 @@ jobs:
                 full_path = os.path.join(path, item)
                 if os.path.isdir(full_path):
                     result[item] = get_structure(full_path)
-                else:
+                elif not is_root:
                     result[item] = None
             return result
 
-        structure = get_structure('.')
+        structure = get_structure('.', is_root=True)
         print("Generated structure:", json.dumps(structure, indent=2))
         with open('structure.json', 'w') as f:
             json.dump(structure, f, indent=2)
