--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: My Coding Portfolio
-description: A showcase of my Python projects
+title: DSA Coding HW/Work
+description: A showcase of my Python projects for DSA
