--- a/.github/workflows/update-structure.yml
+++ b/.github/workflows/update-structure.yml
@@ -1,58 +1,1 @@
-name: Update Folder Structure and Deploy
-
-on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-      - name: Generate folder structure
-        run: |
-          import os
-          import json
-
-          def get_structure(path, is_root=False):
-              result = {}
-              for item in os.listdir(path):
-                  if item.startswith('.') or item in ['structure.json', 'node_modules']:
-                      continue
-                  full_path = os.path.join(path, item)
-                  if os.path.isdir(full_path):
-                      result[item] = get_structure(full_path)
-                  elif not is_root:
-                      result[item] = None
-              return result
-
-          structure = get_structure('.', is_root=True)
-          print("Generated structure:", json.dumps(structure, indent=2))
-          with open('structure.json', 'w') as f:
-              json.dump(structure, f, indent=2)
-        shell: python
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
-        with:
-          path: '.'
-
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v2
+# Delete this file
